@@ -1,5 +1,7 @@
 2004-11-18  Vincent Noel  <vnoel@cox.net>
 
+	* info.c (LogInfo): Simplify a lot. Use markup in properties dialog.
+
 	* logview.c (logview_create_monitor_widget): Move it here. Remove
 	useless calls.
 	(LoadLogMenu): Don't set the size of the filechooser. Don't change
